tests/miz/fail/clusters/fail_clusters_cycle_two_rules_001.miz
registration
  cluster red -> blue for set;
  cluster blue -> red for set;
end;
